BAZING-1 | Front-End | Created Hero Section from HomePage!

--- a/styles/hero.css
+++ b/styles/hero.css
@@ -1,7 +1,10 @@
 .intro {
     position: fixed;
-    overflow: hidden;
+    top: 0;
+    left: 0;
     z-index: 1;
+    
+    overflow: hidden;
 
     width: 100%;
     height: 100vh;
@@ -15,7 +18,9 @@
 }
 
 .hero {
+    position: relative;
     z-index: 0;
+
     overflow: hidden;
 
     color: var(--white);
@@ -25,6 +30,11 @@
 }
 
 .hero-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+
     background-image: url("../src/img/hero/hero-background-img.png");
 
     width: 100%;
@@ -34,6 +44,11 @@
 }
 
 .hero-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+
     background-color: rgba(30, 30, 30, 0.25);
     backdrop-filter: blur(4px);
 
@@ -45,7 +60,7 @@
 
 .logo-position {
     width: 100%;
-    height: auto;
+    height: 15%;
 }
 
 .logo {
@@ -124,7 +139,7 @@
     grid-gap: 10px;
 
     width: 100%;
-    height: 12%;
+    height: 10%;
 
     animation: content-intro 3s ease-in-out 7.5s 1 normal;
 }
