--- a/styles/animations.css
+++ b/styles/animations.css
@@ -1,12 +1,22 @@
 @keyframes hero-background  {
-    0% {background-size: 100;}
-    50% {background-size: 150%;}
-    100% {background-size: 100%;}
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.3);
+    }
+    100% {
+        transform: scale(1);
+    }
 }
 
 @keyframes overlay-intro {
-    from {backdrop-filter: blur(0);}
-    to {backdrop-filter: blur(4px);}
+    from {
+        backdrop-filter: blur(0);
+    }
+    to {
+        backdrop-filter: blur(4px);
+    }
 }
 
 @keyframes content-intro {
@@ -25,7 +35,13 @@
 }
 
 @keyframes arrow {
-    0% {transform: translateY(0px);}
-    50% {transform: translateY(5px);}
-    100% {transform: translateY(0px);}
+    0% {
+        transform: translateY(0px);
+    }
+    50% {
+        transform: translateY(5px);
+    }
+    100% {
+        transform: translateY(0px);
+    }
 }
