--- a/styles/hero.css
+++ b/styles/hero.css
@@ -40,7 +40,7 @@
     width: 100%;
     height: 100%;
 
-    animation: hero-background 50s linear 9s infinite normal;
+    animation: hero-background 50s linear 2s infinite normal;
 }
 
 .hero-overlay {
@@ -55,7 +55,7 @@
     width: 100%;
     height: 100%;
 
-    animation: overlay-intro 2s ease-in-out 7.5s 1 normal;
+    animation: overlay-intro 2s ease-in-out 0s 1 normal;
 }
 
 .logo-position {
@@ -72,7 +72,7 @@
     width: 7vw;
     height: 7vw;
 
-    animation: content-intro 3s ease-in-out 7.5s 1 normal;
+    animation: content-intro 3s ease-in-out 0s 1 normal;
 
     transition: all ease-in-out 0.3s;
     &:hover {
@@ -81,7 +81,7 @@
 }
 
 .logo-container {
-    background-image: url("../src/img/hero/logo.png");
+    background-image: url("../src/img/utils/logo.png");
 
     width: 100%;
     height: 100%;
@@ -104,7 +104,7 @@
     font-size: 4vw;
     line-height: 1.15;
 
-    animation: content-intro 3s ease-in-out 7.5s 1 normal;
+    animation: content-intro 3s ease-in-out 0s 1 normal;
 }
 
 .signin-btn {
@@ -123,7 +123,7 @@
     width: 20vw;
     height: auto;
 
-    animation: content-intro 3s ease-in-out 7.5s 1 normal;
+    animation: content-intro 3s ease-in-out 0s 1 normal;
 
     transition: all ease-in-out 0.3s;
     &:hover {
@@ -141,7 +141,7 @@
     width: 100%;
     height: 10%;
 
-    animation: content-intro 3s ease-in-out 7.5s 1 normal;
+    animation: content-intro 3s ease-in-out 0s 1 normal;
 }
 
 .scroll-down > p {
