--- a/styles/index.css
+++ b/styles/index.css
@@ -37,4 +37,7 @@ a {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+
+    width: 100%;
+    height: 100%;
 }
