--- a/styles/media-querys.css
+++ b/styles/media-querys.css
@@ -1,3 +1,10 @@
+@media (min-width: 2000px) {
+    .books-items {
+        width: 600px;
+        height: 875px;
+    }
+}
+
 @media (max-width: 1300px) {
     .logo {
         width: 8vw;
@@ -19,7 +26,12 @@
     .arrow-scroll {
         width: 3.5vw;
         height: 2vw;
-    }    
+    }
+
+    .books-items {
+        width: 400px;
+        height: 575px;
+    }
 }
 
 @media (max-width: 900px) {
@@ -82,11 +94,6 @@
     .books {
         grid-gap: 10px;
     }
-
-    .books-items {
-        min-width: 350px;
-        height: 500px;
-    }
 }
 
 @media (max-width: 450px) {
@@ -100,7 +107,7 @@
     }
 
     .books-items {
-        min-width: 300px;
-        height: 400px;
+        width: 300px;
+        height: 475px;
     }
 }
