--- a/styles/trending-books.css
+++ b/styles/trending-books.css
@@ -39,8 +39,10 @@
 
     flex-shrink: 0;
     
-    min-width: 500px;
-    height: 800px;
+    min-width: 200px;
+    width: 450px;
+    min-height: 10px;
+    height: 650px;
 }
 
 .books-items:first-child {
