--- a/styles/hero.css
+++ b/styles/hero.css
@@ -1,22 +1,3 @@
-.intro {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 1;
-    
-    overflow: hidden;
-
-    width: 100%;
-    height: 100svh;
-}
-
-.intro > video {
-    object-fit: cover;
-
-    width: 100%;
-    height: 100%;
-}
-
 .hero {
     position: relative;
 
@@ -34,12 +15,12 @@
     left: 0;
     z-index: 2;
 
-    background-image: url("../src/img/hero/hero-background-img.png");
+    background-image: url("../src/img/hero/hero-background-img.webp");
 
     width: 100%;
     height: 100%;
 
-    animation: hero-background 50s linear 10s infinite normal;
+    animation: hero-background 50s linear 0s infinite normal;
 }
 
 .hero-overlay {
@@ -54,7 +35,7 @@
     width: 100%;
     height: 100%;
 
-    animation: overlay-intro 2s ease-in-out 8395ms 1 normal;
+    animation: overlay-intro 0.5s ease-in-out 0s 1 normal;
 }
 
 .logo-position {
@@ -71,7 +52,7 @@
     width: 7vw;
     height: 7vw;
 
-    animation: content-intro 3s ease-in-out 8395ms 1 normal;
+    animation: content-intro 1s ease-in-out 1s 1 normal;
 
     transition: all ease-in-out 0.3s;
     &:hover {
@@ -80,7 +61,7 @@
 }
 
 .logo-container {
-    background-image: url("../src/img/utils/logo.png");
+    background-image: url("../src/img/utils/logo.webp");
 
     width: 100%;
     height: 100%;
@@ -103,7 +84,7 @@
     font-size: 4vw;
     line-height: 1.15;
 
-    animation: content-intro 3s ease-in-out 8395ms 1 normal;
+    animation: content-intro 1s ease-in-out 1s 1 normal;
 }
 
 .signin-btn {
@@ -122,7 +103,7 @@
     width: 20vw;
     height: auto;
 
-    animation: content-intro 3s ease-in-out 8395ms 1 normal;
+    animation: content-intro 1s ease-in-out 1s 1 normal;
 
     transition: all ease-in-out 0.3s;
     &:hover {
@@ -140,7 +121,7 @@
     width: 100%;
     height: 10%;
 
-    animation: content-intro 3s ease-in-out 8395ms 1 normal;
+    animation: content-intro 1s ease-in-out 1s 1 normal;
 }
 
 .scroll-down > p {
@@ -151,11 +132,11 @@
     width: 2.5vw;
     height: 1.5vw;
 
-    animation: arrow 2s ease-in-out 8395ms infinite normal;
+    animation: arrow 1s ease-in-out 1s infinite normal;
 }
 
 .arrow-scroll-container {
-    background-image: url("../src/img/hero/arrow.png");
+    background-image: url("../src/img/hero/arrow.webp");
 
     width: 100%;
     height: 100%;
