BAZING-8 | Front-End | Created SignIn Page!

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -29,6 +29,15 @@ a {
     text-decoration: none;
 }
 
+input {
+    background: none;
+    border: none;
+}
+
+input:focus {
+    outline: none;
+}
+
 .invisible {
     display: none;
 }
